<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_robot"
        android:title="@string/settings_robot_title" >
        <ListPreference
            android:defaultValue="@string/settings_transfer_rate_default"
            android:entries="@array/settings_transfer_rate"
            android:entryValues="@array/settings_transfer_rate_values"
            android:key="pref_key_robot_transfer_rate"
            android:summary="@string/settings_transfer_rate_summary"
            android:title="@string/settings_transfer_rate_title" />

        <EditTextPreference
            android:defaultValue="@string/settings_timeout_default"
            android:inputType="number"
            android:key="pref_key_robot_timeout"
            android:summary="@string/settings_timeout_summary"
            android:title="@string/settings_timeout_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_data"
        android:title="@string/settings_data_title" >
        <EditTextPreference
            android:defaultValue="@string/settings_data_time_distance_default"
            android:inputType="number"
            android:key="pref_key_data_time_distance"
            android:summary="@string/settings_data_time_distance_summary"
            android:title="@string/settings_data_time_distance_title" />
        <EditTextPreference
            android:defaultValue="@string/settings_data_location_distance_default"
            android:inputType="number"
            android:key="pref_key_data_location_distance"
            android:summary="@string/settings_data_location_distance_summary"
            android:title="@string/settings_data_location_distance_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_server"
        android:title="@string/settings_server_title" >
        <EditTextPreference
            android:key="pref_key_server_url"
            android:title="@string/settings_server_url_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_display"
        android:title="@string/settings_display_title" >
        <ListPreference
            android:defaultValue="@string/settings_theme_default"
            android:entries="@array/settings_theme"
            android:entryValues="@array/settings_theme_values"
            android:key="pref_key_theme"
            android:summary="@string/settings_theme_summary"
            android:title="@string/settings_theme_title" />
    </PreferenceCategory>

</PreferenceScreen>