<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="awbb.droid.robot.RobotControlActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/robot_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/robotNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/robot_status"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/robotStatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <Button
            android:id="@+id/robotConnectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_bluetooth"
            android:onClick="onClickConnect"
            android:text="@string/robot_connect_button" />

        <Button
            android:id="@+id/robotDisconnectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_bluetooth"
            android:onClick="onClickDisconnect"
            android:text="@string/robot_disconnect_button" />

        <Button
            android:id="@+id/robotInitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickInit"
            android:text="@string/robot_init_button" />

        <Button
            android:id="@+id/robotStartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_play"
            android:onClick="onClickStart"
            android:text="@string/robot_start_button" />

        <Button
            android:id="@+id/robotAcquireButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_play"
            android:onClick="onClickAcquire"
            android:text="@string/robot_acquire_button" />

        <Button
            android:id="@+id/robotStopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_stop"
            android:onClick="onClickStop"
            android:text="@string/robot_stop_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/robot_location"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/robotLocationSpinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:id="@+id/robotReinitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickReinit"
            android:text="@string/robot_reinit_button" />

        <Button
            android:id="@+id/robotCountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickCount"
            android:text="@string/robot_count_button" />

        <Button
            android:id="@+id/robotDownloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_download"
            android:onClick="onClickDownload"
            android:text="@string/robot_download_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/robot_command"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/robotCommandText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/robot_data_received"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/robotDataReceivedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </TableLayout>

</ScrollView>