<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/ratingMaxMaxText"
        android:text="@string/rating_max_max"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/ratingMaxMaxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/ratingMaxText"
        android:text="@string/rating_max"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/ratingMaxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/ratingMinText"
        android:text="@string/rating_min"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/ratingMinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/ratingMinMinText"
        android:text="@string/rating_min_min"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/ratingMinMinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/ratingWeightText"
        android:text="@string/rating_weight"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/ratingWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />
    
</LinearLayout>